# light-magic

./: Cargo.toml  README.md
.zed/: settings.json
src/: atomic.rs  db.rs  encrypted.rs  join.rs  lib.rs  macros.rs  persistence.rs  table.rs
tests/: atomic.rs  encrypted.rs  test.json  test.rs  test1.json  test2.json  test3.json  test_encrypted.json
