[package]
name = "light-magic"
version = "0.7.1"
edition = "2021"
authors = ["Nils Wrenger <nils@wrenger.net>"]
description = "A lightweight, fast and easy-to-use implementation of a persistent in-memory database"
keywords = ["database", "framework", "macro"]
categories = ["asynchronous", "database", "data-structures"]
rust-version = "1.67.1"
repository = "https://github.com/nwrenger/light-magic"
readme = "README.md"
license = "MIT"

[lib]

[dependencies]
aes-gcm = "0.10.3"
argon2 = "0.5.3"
paste = "1.0"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.8.1"
tracing = "0.1"
