[package]
name = "light-magic"
version = "0.8.0"
edition = "2021"
authors = ["Nils Wrenger <nils@wrenger.net>"]
description = "A lightweight, fast and easy-to-use implementation of a persistent and optionally encrypted in-memory database"
keywords = ["database", "framework", "macro"]
categories = ["asynchronous", "database", "data-structures"]
rust-version = "1.67.1"
resolver = "2"
repository = "https://github.com/nwrenger/light-magic"
readme = "README.md"
license = "MIT"

[package.metadata.docs.rs]
all-features = true

[lib]

[dependencies]
# atomic
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
serde_with = { version = "3.8.1", optional = true }
tracing = { version = "0.1", optional = true }
parking_lot = { version = "0.12.3", optional = true }

# encrypted
aes = { version = "0.8.4", optional = true }
argon2 = { version = "0.5.3", optional = true }
ctr = { version = "0.9.2", optional = true }
hmac = { version = "0.12.1", optional = true }
rand = { version = "0.8.5", optional = true }
sha2 = { version = "0.10.8", optional = true }
rmp-serde = { version = "1.3.0", optional = true }
zeroize = { version="1.8.1", optional = true }

# used for macros, always available
paste = { version = "1.0" }


[features]
default = ["atomic"]
atomic = ["dep:serde", "dep:serde_json", "dep:serde_with", "dep:parking_lot", "dep:tracing"]
encrypted = ["atomic", "dep:aes", "dep:argon2", "dep:ctr", "dep:hmac", "dep:rand", "dep:sha2", "dep:rmp-serde", "dep:zeroize"]

[[test]]
name = "encrypted"
path = "tests/encrypted.rs"
required-features = ["encrypted"]

[[test]]
name = "atomic"
path = "tests/atomic.rs"
required-features = ["atomic"]
